# rosa-boundary

./: .coderabbit.yaml  .containerignore  .gitignore  .shellcheckrc  AGENTS.md  CLAUDE.md  Containerfile  Makefile  OWNERS  README.md  adversary-findings.json  entrypoint.sh  go.mod  go.sum
.claude/: settings.json
.claude/agents/: adversary.md
.claude/agents/references/: agent-skill-security.md  analysis-checklists.md  application-security.md  database-security.md  infrastructure-containers-cloud.md  reading-strategy-and-patterns.md  remediation-playbooks.md  report-template.md  secret-detection.md  supply-chain-analysis.md  web-api-auth-security.md  workflows-cicd-git.md
.github/: dependabot.yml
.github/workflows/: localstack-tests.yml  upload-sarif.yml
deploy/regional/: README.md  iam.tf  lambda-create-investigation.tf  lambda-invoker.tf  oidc.tf
docs/: README.md  testing.md
docs/architecture/: overview.md
docs/runbooks/: investigation-workflow.md  user-access-guide.md
hcp-terraform/rosa-boundary/: main.tf
internal/aws/: ecs.go
internal/cmd/: configure.go  configure_test.go  join_task.go  list_tasks.go  root.go  start_task.go  start_task_test.go  stop_task.go
internal/config/: config.go
internal/lambda/: client.go  client_test.go
lambda/create-investigation/: handler.py  pyproject.toml  test_handler.py
lambda/reap-tasks/: handler.py
scripts/: codecov.sh
tests/localstack/: README.md  ci-run.sh  conftest.py
tests/localstack/integration/: test_ecs_tasks.py  test_full_workflow.py  test_helpers.py  test_task_timeout.py
